@@ -7,7 +7,7 @@ dnl | initialize autotools |---------------------------------------------------
 dnl  ----------------------
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(libqalculate, 0.9.2)
+AM_INIT_AUTOMAKE(libqalculate, 0.9.3)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
